Add missing jvm configs, and fix coordinator properties