@@ -5,6 +5,9 @@ set -e
 #############################
 # Default Values
 
+# jvm
+: "${PRESTO_JVM_XMX_GB:=16}"
+
 # node
 : "${PRESTO_NODE_ENVIRONMENT:=docker}"
 : "${PRESTO_NODE_ID:=$(uuidgen)}"
@@ -39,6 +42,25 @@ set -e
 
 
 #############################
+# jvm.config
+
+{   
+    echo "-server"
+    echo "-Xmx${PRESTO_JVM_XMX_GB}"
+    echo "-XX:-UseBiasedLocking"
+    echo "-XX:+UseG1GC"
+    echo "-XX:G1HeapRegionSize=32M"
+    echo "-XX:+ExplicitGCInvokesConcurrent"
+    echo "-XX:+ExitOnOutOfMemoryError"
+    echo "-XX:+UseGCOverheadLimit"
+    echo "-XX:+HeapDumpOnOutOfMemoryError"
+    echo "-XX:ReservedCodeCacheSize=512M"
+    echo "-Djdk.attach.allowAttachSelf=true"
+    echo "-Djdk.nio.maxCachedBufferSize=2000000"
+} > /etc/presto/jvm.config
+
+
+#############################
 # node.properties
 
 {
@@ -54,13 +76,18 @@ set -e
 
 {
     echo "coordinator=${PRESTO_CONF_COORDINATOR}"
-    echo "node-scheduler.include-coordinator=${PRESTO_CONF_INCLUDE_COORDINATOR}"
     echo "http-server.http.port=${PRESTO_CONF_HTTP_PORT}"
-    echo "discovery-server.enabled=${PRESTO_CONF_DISCOVERY_SERVER_ENABLED}"
     echo "discovery.uri=${PRESTO_CONF_DISCOVERY_URI}"
     echo "query.max-memory=${PRESTO_CONF_QUERY_MAX_MEMORY}"
     echo "query.max-memory-per-node=${PRESTO_CONF_QUERY_MAX_MEMORY_PER_NODE}"
     echo "query.max-total-memory-per-node=${PRESTO_CONF_QUERY_MAX_TOTAL_MEMORY_PER_NODE}"
+    
+    # Only write out coordinator specific configs if this is a coordinator
+    if [ $PRESTO_CONF_COORDINATOR == "true" ]; then
+        echo "discovery-server.enabled=${PRESTO_CONF_DISCOVERY_SERVER_ENABLED}"
+        echo "node-scheduler.include-coordinator=${PRESTO_CONF_INCLUDE_COORDINATOR}"
+    fi
+
 } > /etc/presto/config.properties
 
 
